// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RequestButtons renders edit and delete buttons with a gentler warning for deleting a trackless request 1`] = `
<Fragment>
  <Button
    block={false}
    ghost={false}
    htmlType="button"
    icon="edit"
    loading={false}
    onClick={[Function]}
    shape="circle"
    style={
      Object {
        "marginRight": "0.5em",
      }
    }
  />
  <Popconfirm
    cancelText="No"
    disabled={false}
    icon={
      <Icon
        theme="filled"
        type="exclamation-circle"
      />
    }
    okText="Yes"
    okType="primary"
    onConfirm={[Function]}
    placement="top"
    title="This request has not been assigned to a group. Are you sure you want to delete this request?"
    transitionName="zoom-big"
    trigger="click"
  >
    <Button
      block={false}
      ghost={false}
      htmlType="button"
      icon="delete"
      loading={false}
      shape="circle"
    />
  </Popconfirm>
</Fragment>
`;

exports[`RequestButtons renders edit and delete buttons with a warning for deleting a request 1`] = `
<Fragment>
  <Button
    block={false}
    ghost={false}
    htmlType="button"
    icon="edit"
    loading={false}
    onClick={[Function]}
    shape="circle"
    style={
      Object {
        "marginRight": "0.5em",
      }
    }
  />
  <Popconfirm
    cancelText="No"
    disabled={false}
    icon={
      <Icon
        theme="filled"
        type="exclamation-circle"
      />
    }
    okText="Yes"
    okType="primary"
    onConfirm={[Function]}
    placement="top"
    title="This request has not been assigned to a group. If you delete it, you will not receive any feedback on it. Are you sure you want to delete this request?"
    transitionName="zoom-big"
    trigger="click"
  >
    <Button
      block={false}
      ghost={false}
      htmlType="button"
      icon="delete"
      loading={false}
      shape="circle"
    />
  </Popconfirm>
</Fragment>
`;
